--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/preload.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/preload.html
@@ -18,7 +18,7 @@ function preLoading()
 		"[[${BASE_PATH}]]/order/status/list",
 		"[[${BASE_PATH}]]/order/delivery/list",
 		"[[${BASE_PATH}]]/order/delivery/view",
-		"[[${BASE_PATH}]]/claim/list",
+		"[[${BASE_PATH}]]/claim/display/list",
 		"[[${BASE_PATH}]]/accounts/ap/schedule/list",
 		"[[${BASE_PATH}]]/accounts/ar/list",
 		"[[${BASE_PATH}]]/report/order/list"
