--- a/src/main/resources/templates/platform/mgmt/authority/list.html
+++ b/src/main/resources/templates/platform/mgmt/authority/list.html
@@ -293,11 +293,11 @@ $(document).ready(function() {
 								
 								if (dataKeyName == "uSeq")
 								{
-									_showUserdataKey);	
+									_showUserdata(Key);	
 								}
 								else
 								{
-									_showUserGroupdataKey);
+									_showUserGroupdata(Key);
 								};
 							});
 						};
