--- a/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
@@ -19,6 +19,7 @@
 <script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
 <script th:src="@{/portal/js/jWebppy.ui.popup.js}"></script>
 <script th:src="@{/portal/js/jWebppy.ui.dimmer.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.file.js}"></script>
 <script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
