--- a/src/main/resources/templates/portal/iv/board/list.html
+++ b/src/main/resources/templates/portal/iv/board/list.html
@@ -5,8 +5,8 @@
 	layout:decorate="~{portal/layout/iv/hq/parts/common/index}">
 	
 <th:block layout:fragment="content">
-	<div class="block-header" th:with="boardTitle='PLTF_T_' + ${board.bSeq}">
-		<div class="block-title">[[#{${boardTitle}}]]</div>
+	<div class="block-header">
+		<div class="block-title" th:text="${boardName}"></div>
 		<div class="block-button-area">
 			<button id="BTN_write" type="button" th:text="#{HQP_B_WRITE}"></button>
 			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button>			
