--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -227,8 +227,8 @@ function goToBoard(bSeq)
 };
 
 $(".bulletin-area a.link").on("click", function() {
-	location.href = "/portal/iv/board/view?bSeq=" + $(this).attr("bSeq") + "&bcSeq=" + $(this).attr("data-key");
-	//Popup.open("/portal/iv/board/view?bSeq=" + bcSeq);
+	let url = "/portal/iv/board/popup/view?bSeq=" + $(this).attr("bSeq") + "&bcSeq=" + $(this).attr("data-key") + "&fgFrom=M";
+	Popup.open(url, 1024, 730, "Y", "Y");
 });
 
 function checkExpiredPassword()
