--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
@@ -80,6 +80,28 @@
 	</div>
 	
 <script>
+function aaa(obj)
+{
+	if (JpUtilsObject.isJqueryObject(obj))
+	{
+		if (obj.length > 0)
+		{
+			return false;
+		};
+		
+		return true;
+	};
+	
+	alert("'" + obj + "'");
+	
+	if (typeof obj == "undefined" || obj == "null" || obj == null)
+	{
+		return true;
+	};	
+	
+	return false;
+};
+
 $(function(){
 	$("input:radio[name=pDocType][value='[[${pDocType}]]']").prop("checked", true);
 	
@@ -108,8 +130,14 @@ $(function(){
 		columnDefs: [
 			{targets: 0, className: "link dt-body-center"},
 			{targets: [3, 4, 5, 7], className: "dt-body-center"},
-			{targets: 6, className: "dt-body-right"},
+			{targets: 6, className: "dt-body-right"}
 		],
+		rowCallback: function(row, data, index) {
+			if (index == 0)
+			{
+				$(row).find("td").addClass("summary");
+			};
+		},
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/display/order/list/data",
 			data: function(p)
@@ -128,7 +156,7 @@ $(function(){
 				
 				for (let i=0, length=result.length; i<length; i++)
 				{
-					result[i].ERDAT2 = result[i].ERDAT + " " + result[i].ERZET;
+					result[i].ERDAT2 = JpUtilsString.trimToEmpty(result[i].ERDAT) + " " + JpUtilsString.trimToEmpty(result[i].ERZET);
 				};
 				
 				$("#totalRows").html(JpUtilsNumber.addComma(result.length) + " row(s).");
