--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
@@ -6,7 +6,7 @@
 	<div class="block-header">
 		<div class="block-title" th:text="#{HQP_T_ORDER_DETAIL}"></div>
 		<div id="BTN_search" class="block-button-area">
-			<button id="BTN_pdfDownload" type="button" th:text="#{HQP_B_PDF_DOWNLOAD}"></button><!-- PDF Download -->
+			<!-- button id="BTN_pdfDownload" type="button" th:text="#{HQP_B_PDF_DOWNLOAD}"></button--><!-- PDF Download -->
 			<button id="BTN_back" type="button" th:text="#{HQP_B_BACK}"></button><!-- Back -->
 		</div>
 	</div>
