--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/list.html
@@ -33,11 +33,11 @@
 				</td>			
 			</tr>
 			<tr>
-				<th th:text="#{HQP_L_ORDER_PART_NO}"></th>
+				<th th:text="#{HQP_L_PO_NO}"></th>
 				<td>
 					<div class="input-area">
-						<input type="text" id="pOrderPartNo" name="pOrderPartNo" class="custom-ui" th:value="${pOrderPartNo}">
-					</div>
+						<input type="text" id="pPoNo" name="pPoNo" class="custom-ui" th:value="${pPoNo}">
+					</div>			
 				</td>
 				<th th:text="#{HQP_L_ORDER_DATE}"></th>
 				<td>
@@ -48,12 +48,12 @@
 				</td>					
 			</tr>		
 			<tr>
-				<th th:text="#{HQP_L_PO_NO}"></th>
+				<th th:text="#{HQP_L_ORDER_PART_NO}"></th>
 				<td colspan="3">
 					<div class="input-area">
-						<input type="text" id="pPoNo" name="pPoNo" class="custom-ui" th:value="${pPoNo}">
-					</div>			
-				</td>
+						<input type="text" id="pOrderPartNo" name="pOrderPartNo" class="custom-ui" th:value="${pOrderPartNo}">
+					</div>
+				</td>			
 			</tr>		
 		</tbody>
 	</table>
@@ -93,7 +93,8 @@ $(function(){
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
 		//fixedColumns: {leftColumns: 5},
-		columns : [				
+		columns : [
+			{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"},
 			{data: "VBELN", 		title: "[[#{HQP_L_ORDER_NO}]]"},
 			{data: "SO_ITEM", 		title: "[[#{HQP_L_ORDER_ITEM_ROWS}]]"},	
 			{data: "KONDA_T", 		title: "[[#{HQP_L_ORDER_TYPE}]]"},	
@@ -104,12 +105,11 @@ $(function(){
 			{data: "SH_QTY", 		title: "[[#{HQP_L_SHIPMENT_COMPLETE_QTY}]]"},
 			{data: "BO_AMT", 		title: "[[#{HQP_L_BACKORDER_QTY}]]"},
 			{data: "VSBED_T", 		title: "[[#{HQP_L_SHIPPING_CONDITION}]]"},		
-			{data: "WAERK", 		title: "[[#{HQP_L_CURR}]]"},
-			{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"}
+			{data: "WAERK", 		title: "[[#{HQP_L_CURR}]]"}
 		],
 		columnDefs: [
-			{targets: [0], className: "link dt-body-center"},
-			{targets: [1, 3, 4, 5, 6, 7, 8, 10, 11], className: "dt-body-center"}
+			{targets: [1], className: "link dt-body-center"},
+			{targets: [2, 4, 5, 6, 7, 8, 9, 11], className: "dt-body-center"}
 		],
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/status/list/data",
@@ -146,7 +146,7 @@ $(function(){
 	// Datatable grid 초기 설정 셋업
 	initGridTable($tableObj);
 	
-	$("#TBL_grid tbody").on("click", "td:first-child", function (e){				
+	$("#TBL_grid tbody").on("click", "td:nth-child(2)", function (e){				
 		let rowData = $tableObj.row(this).data();
 		
 		//조회 페이지 헤더 영역에 사용되는 정보
@@ -187,7 +187,7 @@ $("#BTN_totalDownload").on("click", function(){
 	let orderNo = "";
 	let delimiter = "[[${T(org.jwebppy.portal.common.PortalConfigVo).DELIMITER}]]";
 	
-	$("#TBL_grid td:first-child").each(function(){
+	$("#TBL_grid td:nth-child(2)").each(function(){
 		orderNo += $(this).text() + delimiter;
 	});
 	
