--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
@@ -446,9 +446,10 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 /* dataTables 데이터 좌우 정렬을 위한 클래스 */
 .center {text-align: center;}
 .right {text-align: right;}
+.summary {background-color: #dcf2ec; font-weight: bold;}
 
 /*td.link {text-decoration: underline; color: #4183C4; cursor: pointer;}*/
-td.link {text-decoration: underline; color: cursor: pointer;}
+td.link {text-decoration: underline; color:#4183C4; cursor: pointer;}
 td.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 
 .empty-message-area {
