--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/list.html
@@ -70,12 +70,15 @@ $(function(){
 		columnDefs: [
 			{targets: [0, 1], className: "dt-body-center"},
 			{targets: [2, 3, 4, 5, 6], className: "dt-body-right"}
-		],			
+		],
+		rowCallback: function(row, data, index) {
+			if (index == 0)
+			{
+				$(row).find("td").addClass("summary");
+			};
+		},		
 		ajax: {
 			url: "[[${BASE_PATH}]]/accounts/ap/list/data",
-			data: function(p)
-			{
-			},
 			dataSrc: function(response) 
 			{				
 				let data = response.RESULT;
