--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
@@ -88,7 +88,8 @@ $(function(){
 		scrollY: 100,
 		//fixedColumns: {leftColumns: 8},
 		columns : [
-			{data: "KONDA_T", 		title: "[[#{HQP_L_ORDER_TYPE}]]"},//Order<br>Type				
+			{data: "KONDA_T", 		title: "[[#{HQP_L_ORDER_TYPE}]]"},//Order<br>Type
+			{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"},//P.O. No.
 			{data: "AUDAT", 		title: "[[#{HQP_L_ORDER_DATE}]]"},//Order Date				
 			{data: "VBELN", 		title: "[[#{HQP_L_ORDER_NO}]]"},//Order No.
 			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},//Line Item 
@@ -99,11 +100,10 @@ $(function(){
 			{data: "KWMENG_SH", 	title: "[[#{HQP_L_SHIPMENT_COMPLETE_QTY}]]"},//S.Completion Qty
 			{data: "KWMENG", 		title: "[[#{HQP_L_BACKORDER_QTY}]]"},//B/O Quantity
 			{data: "VRKME", 		title: "[[#{HQP_L_UOM}]]"},//UoM,
-			{data: "PRETD",			title: "[[#{HQP_L_ETD}]]"},//ETD Comment
-			{data: "BSTKD", 		title: "[[#{HQP_L_PO_NO}]]"}//P.O. No.
+			{data: "PRETD",			title: "[[#{HQP_L_ETD}]]"}//ETD Comment			
 		],
 		columnDefs: [
-			{targets: [1, 2, 3, 7, 8, 9, 10, 11, 12], className: "dt-body-center"}
+			{targets: [1, 2, 3, 4, 8, 9, 10, 11, 12], className: "dt-body-center"}
 		],		
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/backorder/list/data",
